--- a/index.html
+++ b/index.html
@@ -57,6 +57,8 @@
     </div>
     <div class="container-fluid main aside">
         <div class="panel comment-panel">
+            <h3>Kako je bilo za prethodnu <span class="text-danger">najluđu noć</span>? Gde je bilo naj, naj? <i>Lokale sa <span>bedžom</span> smo posetili, i svedoci smo nezaboravnog provoda tamo.</i> Izaberite na vreme!</h3>
+            <br/>
         </div>
     </div>
 
